--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.kalkausar.latihan">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="Linear Layout Vertical"
+        android:icon="@drawable/logo"
+        android:label="Sardifa Travel"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".Layout_Relative"
+            android:label="Layout Relative" />
+        <activity
+            android:name=".hal_utama"
+            android:label="Sardifa Travel"
+            android:noHistory="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Layout_Relative"
-            android:label="Layout Relative"></activity>
+        <activity
+            android:name=".ReadMore"
+            android:label="Read More Layout" />
+        <activity
+            android:name=".Menu_Activity"
+            android:label="@string/title_activity_menu_"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
