--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,10 +17,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".Layout_Relative"
-            android:label="Layout Relative" />
-        <activity
-            android:name=".hal_utama"
+            android:name=".Splashscreen"
             android:label="Sardifa Travel"
             android:noHistory="true"
             android:screenOrientation="portrait"
@@ -31,20 +29,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ReadMore"
-            android:label="Read More Layout" />
-        <activity
-            android:name=".Menu_Activity"
-            android:label="@string/title_activity_menu_"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".RegisterActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".DetailActivity" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
