New Version april 2019

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     //firebase Storeage
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.firebaseui:firebase-ui-storage:4.1.0'
-
+    //firebase Database
     implementation 'com.google.firebase:firebase-database:16.0.1'
 }
 
